--- a/html/profile.html
+++ b/html/profile.html
@@ -68,14 +68,16 @@
                         <p>Актуальные курсы: Курс: Разработчик</p>
                         <p class="info_person_box_content_action_text">Достижения:</p>
                         <div class="achiv">
-                            <img src="../img/arrowleft2.svg" alt="Arrow">
-                            <div class="achiv_items">
-                                <img src="../img/achiv.svg" alt="Achievement">
-                                <img src="../img/achiv.svg" alt="Achievement">
-                                <img src="../img/achiv.svg" alt="Achievement">
-                                <img src="../img/achiv.svg" alt="Achievement">
-                            </div>
-                            <img src="../img/arrowright2.svg" alt="Arrow">
+                            <img id="arrowLeft" src="../img/arrowleft2.svg" alt="Arrow">
+                                <div class="achiv_items">
+                                    <div id="achivLine" class="achiv_line">
+                                        <img src="../img/achiv.svg" alt="Achievement">
+                                        <img src="../img/achiv.svg" alt="Achievement">
+                                        <img src="../img/achiv.svg" alt="Achievement">
+                                        <img src="../img/achiv.svg" alt="Achievement">
+                                    </div>
+                                </div>
+                            <img id="arrowRight" src="../img/arrowright2.svg" alt="Arrow">
                         </div>
                     </div>
                 </div>
