--- a/html/about.html
+++ b/html/about.html
@@ -54,10 +54,10 @@
                             <img class="course_card" src="../img/photo3.jpg" alt="photo3">
                             <img class="course_card" src="../img/photo4.jpg" alt="photo4">
                             <img class="course_card" src="../img/photo5.jpg" alt="photo5">
-                            
+
                         </div>
                     </div>
-            </div>
+                </div>
 
 
         </section>
@@ -70,7 +70,7 @@
                 <ol class="footer_box_list">
                     <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
                     <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
-                    <li><a href="#" class="footer_box_list_item">О нас</a></li>
+                    <li><a href="../html/about.html" class="footer_box_list_item">О нас</a></li>
                     <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
                 </ol>
             </div>
