--- a/html/main_page.html
+++ b/html/main_page.html
@@ -89,7 +89,7 @@
           <div data-f="GameDev" data-fAge="6" class="course_card">
             <img class="course_card_img" src="../img/Frame 1908.png" alt="Scratch" />
             <div class="course_description_container">
-              <div class="course_card_name">Scrath</div>
+              <div class="course_card_name">Scratch</div>
               <div class="course_card_description">Визуальная среда программирования, которая позволяет детям создавать
                 собственные анимированные интерактивные игры и проекты.</div>
             </div>
@@ -237,7 +237,7 @@
             <div class="reviewer_photo"></div>
             <div class="reviewer_inf_container">
               <div class="reviewer_name">Андрей Петрович</div>
-              <div class="reviewer_course">Scrath</div>
+              <div class="reviewer_course">Scratch</div>
               <div class="reviewer_reviwe">Курс замечательный! Многое попробовали и научились практическим навыкам</div>
             </div>
           </div>
@@ -278,7 +278,7 @@
         <ol class="footer_box_list">
           <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
           <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
-          <li><a href="#" class="footer_box_list_item">О нас</a></li>
+          <li><a href="../html/about.html" class="footer_box_list_item">О нас</a></li>
           <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
         </ol>
       </div>
