Поправил отступы и шрифты на вход/регистрация

--- a/html/courses.html
+++ b/html/courses.html
@@ -32,7 +32,7 @@
 
 
     <main class="main">
-        <h1 class="Slovo">Каталог всех курсов нашей школы</h1>
+        <h1 class="Slovo">Каталог всех курсов нашего класса</h1>
         <div class="Vse">
             <section class="Filtri">
 
