--- a/html/profile.html
+++ b/html/profile.html
@@ -68,7 +68,7 @@
                         <p>Актуальные курсы: Курс: Разработчик</p>
                         <p class="info_person_box_content_action_text">Достижения:</p>
                         <div class="achiv">
-                            <img id="arrowLeft" src="../img/arrowleft2.svg" alt="Arrow">
+                            <img class="arrows" id="arrowLeft" src="../img/arrowleft2.svg" alt="Arrow">
                             <div class="achiv_items">
                                 <div id="achivLine" class="achiv_line">
                                     <img src="../img/achiv.svg" alt="Achievement">
@@ -81,7 +81,7 @@
                                     <img src="../img/achiv.svg" alt="Achievement">
                                 </div>
                             </div>
-                            <img id="arrowRight" src="../img/arrowright2.svg" alt="Arrow">
+                            <img class="arrows" id="arrowRight" src="../img/arrowright2.svg" alt="Arrow">
                         </div>
                     </div>
                 </div>
