везде правки в футере

--- a/html/main_page.html
+++ b/html/main_page.html
@@ -273,6 +273,56 @@
 
   <footer>
     <section class="footer">
+        <div class="footer_box">
+            <h2 class="footer_box_title">Информация</h2>
+            <ol class="footer_box_list">
+                <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
+                <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
+                <li><a href="../html/about.html" class="footer_box_list_item">О нас</a></li>
+                <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
+            </ol>
+        </div>
+
+        <div class="footer_box footer_info">
+            <h2 class="footer_box_title">По вопросам обращайтесь в техническую поддержку.</h2>
+            <div class="footer_box_div">
+                <div class="footer_box_div_content">
+                    <img src="../img/Phone.svg" alt="Phone">
+                    <p class="footer_info_text">+79688873621</p>
+                </div>
+
+                <div class="footer_box_div_content">
+                    <img src="../img/Mail.svg" alt="Mail">
+                    <p class="footer_info_text">codvolok@gmail.com</p>
+                </div>
+            </div>
+            <div class="footer_info_box">
+                <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
+                        src="../img/VK_Compact_Logo (1) 1.svg" alt="VK"></a>
+
+                <a href="#" class="footer_info_box_item"><img src="../img/Logo 1.svg" alt="Telegram"></a>
+
+                <a href="https://instagram.com/it_class_vlk?igshid=YWJhMjlhZTc=" class="footer_info_box_item"><img
+                        src="../img/instagram 1.svg" alt="Instagram"></a>
+            </div>
+        </div>
+
+        <div class="footer_box">
+            <h2 class="footer_box_title">Местоположение</h2>
+            <ol class="footer_box_list">
+                <li><a href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
+                        class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
+                </li>
+
+                <p class="footer_box_text">
+                    Наш адрес: <br>
+                    Школьная улица, 9А, Волоколамск, Московская область
+                </p>
+            </ol>
+        </div>
+    </section>
+</footer><footer>
+    <section class="footer">
       <div class="footer_box">
         <h2 class="footer_box_title">Информация</h2>
         <ol class="footer_box_list">
@@ -284,7 +334,7 @@
       </div>
 
       <div class="footer_box footer_info">
-        <p class="footer_info_text">По вопросам обращайтесь в техническую поддержку.</p>
+        <h2 class="footer_box_title">По вопросам обращайтесь в техническую поддержку.</h2>
         <div class="footer_box_div">
           <div class="footer_box_div_content">
             <img src="../img/Phone.svg" alt="Phone">
