--- a/html/profile.html
+++ b/html/profile.html
@@ -151,7 +151,7 @@
             </div>
 
             <div class="footer_box footer_info">
-                <p class="footer_info_text">По вопросам обращайтесь в техническую поддержку.</p>
+                <h2 class="footer_box_title">По вопросам обращайтесь в техническую поддержку.</h2>
                 <div class="footer_box_div">
                     <div class="footer_box_div_content">
                         <img src="../img/Phone.svg" alt="Phone">
