--- a/html/404.html
+++ b/html/404.html
@@ -36,9 +36,8 @@
             <img class="main_logo_img" src="../img/eror.png" alt="eror" />
         </div>
         <div class='c'>
-            <h1 class="_404">404! Такой </h1>
-            <h1 class="_404">страницы нет </h1>
-            <a class='btn' href='#'>Перейти на главную</a>
+            <h1 class="_404">404! Такой <br>
+                страницы нет </h1>
         </div>
     </section>
 
@@ -60,7 +59,7 @@
             </div>
 
             <div class="footer_box footer_info">
-                <p class="footer_info_text">По вопросам обращайтесь в техническую поддержку.</p>
+                <h2 class="footer_box_title">По вопросам обращайтесь в техническую поддержку.</h2>
                 <div class="footer_box_div">
                     <div class="footer_box_div_content">
                         <img src="../img/Phone.svg" alt="Phone">
