убрал точку в футере

--- a/html/headerM&footer.html
+++ b/html/headerM&footer.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="footer_box footer_info">
-                <h2 class="footer_box_title">По вопросам обращайтесь в техническую поддержку.</h2>
+                <h2 class="footer_box_title">По вопросам обращайтесь в техническую поддержку</h2>
                 <div class="footer_box_div">
                     <div class="footer_box_div_content">
                         <img src="../img/Phone.svg" alt="Phone">
