--- a/html/profile.html
+++ b/html/profile.html
@@ -65,7 +65,7 @@
                     <div class="info_person_box_content">
                         <h1 class="heading">Пётр Петрович</h1>
                         <p>Возвраст: 19</p>
-                        <p>Актуальные курсы: Курс: Разработчик</p>
+                        <p>Актуальные курсы: Scratch</p>
                         <p class="info_person_box_content_action_text">Достижения:</p>
                         <div class="achiv">
                             <img class="arrows" id="arrowLeft" src="../img/arrowleft2.svg" alt="Arrow">
